# ICEBEEGAPP

./: .dockerignore  .env.example  .gitignore  .importlinter  ARQUITECTURA_Y_EJEMPLOS.md  Dockerfile  PROMPT_NUEVAS_FEATURES.md  QUICKSTART.md  README.md  RESUMEN_EJECUTIVO.md  commit_msg.txt  pyproject.toml  ruff.toml  test_svc_tmp.py  ÍNDICE_CENTRAL.md
.github/workflows/: ci.yml  claude-review.yml
cliente/: .env.example  README.md  index.html  package-lock.json  package.json  shot_tmp.cjs  vite.config.js
cliente/src/: App.vue  api.js  recientes.js  style.css
cliente/src/components/: HomeView.vue  IcebergEditor.vue  LevelCard.vue
tests/: conftest.py  test_smoke.py
